--- a/RTP_3Camera_Sever/RTP_3Camera_Sever.vcxproj.filters
+++ b/RTP_3Camera_Sever/RTP_3Camera_Sever.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="CvvImage.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ZedImg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RTP_3Camera_Sever.cpp">
